objects/SaiObj600__c.object
<CustomObject>
    <fields>
        <fullName>F1__c</fullName>
        <label>F1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F2__c</fullName>
        <label>F2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3__c</fullName>
        <label>F3</label>
        <type>Email</type>
    </fields>
</CustomObject>